# midn

./: .gitignore  Cargo.toml  README.md  project_manifest.json  rust-toolchain.toml
.github/: midn-ci-dashboard.html  midn-test-template.html
.github/workflows/: apply-patch.yml  midn-bench.yml  midn-test.yml
.mdix/: .manifest.mdix
.mdix/env/: mappings.mdix
.mdix/patches/: patch.mdix
.mdix/project_structure/: project_structure.mdix
benches/: auth_bench.rs  proto_bench.rs
crates/midn-auth/: Cargo.toml
crates/midn-auth/benches/: auth_bench.rs
crates/midn-auth/src/: ffi.rs  keys.rs  lib.rs  milenage.rs  tuak.rs
crates/midn-auth/src/tuak/: algorithm.rs  keccak_p.rs  sponge.rs
crates/midn-core/: Cargo.toml
crates/midn-core/benches/: core_bench.rs
crates/midn-core/src/: hss.rs  kdf.rs  lib.rs
crates/midn-core/src/amf/: mod.rs  registration.rs  state_machine.rs
crates/midn-core/src/ecs/: components.rs  mod.rs  registry.rs  systems.rs  world.rs
crates/midn-core/src/mme/: attach.rs  detach.rs  mod.rs  state_machine.rs
crates/midn-ecs/: Cargo.toml
crates/midn-ecs/src/: components.rs  lib.rs  registry.rs  systems.rs  world.rs
crates/midn-proto/: Cargo.toml
crates/midn-proto/benches/: proto_bench.rs
crates/midn-proto/src/: error.rs  lib.rs
crates/midn-proto/src/gtp/: header.rs  mod.rs  parser.rs
crates/midn-proto/src/nas/: codec.rs  ie.rs  messages.rs  mod.rs  security.rs
crates/midn-proto/src/ngap/: messages.rs  mod.rs
crates/midn-proto/src/s1ap/: codec.rs  ie_ids.rs  messages.rs  mod.rs  per.rs
crates/midn-userplane/: Cargo.toml  build.rs
crates/midn-userplane-ebpf/: Cargo.toml  rust-toolchain.toml
crates/midn-userplane-ebpf/src/: gtp_xdp.rs  main.rs  maps.rs
crates/midn-userplane/benches/: userplane_bench.rs
crates/midn-userplane/src/: lib.rs
crates/midn-userplane/src/ebpf/: loader.rs  mod.rs
crates/midn-userplane/src/upf/: forwarder.rs  mod.rs  routing.rs  session.rs  session_manager.rs  tunnel.rs  xdp_types.rs
docs/: architecture.md  dev-setup.md  phase1-auth.md  phase2-proto.md  phase3-userplane.md  platform-optimization.md
midn-auth/: index.html
midn-auth/builds/build_103/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_11/: midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_112/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_114/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_118/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_119/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_122/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_126/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_127/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_136/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_138/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_139/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_140/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_149/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_154/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_161/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_166/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_167/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_168/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_17/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_172/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_173/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_180/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_190/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_193/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_194/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_195/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_36/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_41/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_42/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_43/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_44/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_45/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_47/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_49/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_50/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_52/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_69/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_70/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_71/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_73/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_87/: index.html  midn-auth-test-results.json  release-perf.txt
midn-auth/builds/build_89/: index.html  midn-auth-test-results.json  (+1 more)
midn-core/: index.html
midn-ecs/: index.html
midn-proto/: index.html  midn-proto-test-results.json
midn-userplane/: index.html  midn-userplane-test-results.json
(+359 files in other folders)
