[workspace]
members = [
    "crates/midn-auth",
    "crates/midn-proto",
    "crates/midn-ecs",
    "crates/midn-core",
    "crates/midn-userplane",
    "crates/midn-userplane-ebpf",
]
resolver = "2"

# mid-math: uncomment one option
# [workspace.dependencies]
# mid-math = { git = "https://github.com/Mid-D-Man/mid-engine", branch = "main" }
# mid-math = { path = "../mid-engine/crates/mid-math" }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
debug         = false

[profile.dev]
opt-level = 0
debug     = true

[profile.release-with-debug]
inherits = "release"
debug    = true
strip    = false
