# crates/midn-core/Cargo.toml
[package]
name    = "midn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
midn-auth  = { path = "../midn-auth" }
midn-proto = { path = "../midn-proto" }
rand       = "0.8"
thiserror  = "1"
tracing    = "0.1"
hex        = "0.4"
tokio      = { version = "1", features = ["rt", "sync", "macros"] }
hmac       = "0.12"   # Kasme KDF — crates/midn-core/src/kdf.rs
sha2       = "0.10"   # Kasme KDF — crates/midn-core/src/kdf.rs

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
