[package]
name    = "midn-userplane-ebpf"
version = "0.1.0"
edition = "2024"

# This crate compiles to a BPF target — no_std, no allocator, no libc.
#
# Normal build (resolves but produces host binary for IDE/type checking):
#   cargo check -p midn-userplane-ebpf
#
# eBPF build (required for actual kernel deployment):
#   cargo +nightly build -p midn-userplane-ebpf \
#     --release \
#     --target bpfel-unknown-none \
#     -Z build-std=core
#
# Prerequisites:
#   rustup toolchain install nightly --component rust-src
#   cargo install bpf-linker

[[bin]]
name = "midn-userplane-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf     = "0.1"
aya-log-ebpf = "0.1"

[profile.release]
opt-level = 3
lto       = true
