[package]
name    = "midn-userplane"
version = "0.1.0"
edition = "2024"

[lib]
name = "midn_userplane"

[dependencies]
midn-proto = { path = "../midn-proto" }
tokio      = { version = "1", features = ["full"] }
bytes      = "1.5"
thiserror  = "1.0"
tracing    = "0.1"
# mid-math = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aya     = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
# aya-build = "0.1"  # uncomment Phase 3

[[bench]]
name    = "userplane_bench"
harness = false
