# crates/midn-userplane/Cargo.toml
[package]
name    = "midn-userplane"
version = "0.1.0"
edition = "2024"

[lib]
name = "midn_userplane"

[features]
default = []
# Compile and embed the XDP eBPF program at build time.
# Requires: rustup toolchain install nightly --component rust-src
#           cargo install bpf-linker
# Build:    cargo build -p midn-userplane --features ebpf
# Test:     cargo test  -p midn-userplane --features ebpf
ebpf = []

[dependencies]
midn-proto = { path = "../midn-proto" }
tokio      = { version = "1", features = ["full"] }
bytes      = "1.5"
thiserror  = "1.0"
tracing    = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
aya     = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "userplane_bench"
harness = false
